fixed some more layout issues

--- a/app/globals.css
+++ b/app/globals.css
@@ -1116,25 +1116,37 @@ textarea:focus {
 /* --- MOVING CARDS --- */
 
 .moving-card {
-  width: 480px;
+  width: 450px;
   position: relative;
   border-radius: 1rem;
   border: 1px solid #334155;
   border-bottom: 0;
   flex-shrink: 0;
-  padding: 1.5rem 2rem;
+  padding: 1.5rem 1.2rem;
+}
+
+@media (max-height: 1024px) {
+  .moving-card {
+    width: 300px;
+    padding: 1rem 1rem;
+  }
 }
 
 @media (max-width: 1024px) {
   .moving-card {
-    width: 250px;
-    padding: 1rem 1.5rem;
+    width: 280px;
+    padding: 1rem 1rem;
   }
 }
 
-@media (max-width: 640px) {
+@media (max-height: 768px) {
   .moving-card {
-    width: 200px;
+    width: 250px;
+  }
+}
+@media (max-width: 768px) {
+  .moving-card {
+    width: 250px;
   }
 }
 
@@ -1200,13 +1212,13 @@ textarea:focus {
 
 @media (max-height: 800px) {
   .spawnart-title {
-    width: 300px;
+    width: 270px;
   }
 }
 
 @media (max-width: 1024px) {
   .spawnart-title {
-    width: 300px;
+    width: 270px;
   }
 }
 
